# md-to-speech

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: index.html  sample.md
src/md_to_speech/: __init__.py  __main__.py  app.py  audio.py  cli.py  errors.py  markdown_parser.py  ollama.py  text_prep.py  tts.py
src/md_to_speech.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_app.py  test_markdown_parser.py  test_text_prep.py
